Fixed phone Hero alignment issue - 2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,7 @@
     opacity: 1 !important;
     transform: scale(1.05);
   }
+
+  .element-class {
+    scrollbar-gutter: stable both-edges;
+ }
